# shipping-stock-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: refresh_daily.yml  refresh_prices.yml
.planning/: PROJECT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
app/: main.py
app/pages/: 01_Stock_Detail.py  02_Rate_Monitor.py
data/fleet/: DHT.json  EGLE.json  FRO.json  GLNG.json  GOGL_delisted.json  HAFNI.json  INSW.json  NMM.json  SBLK.json  SFL.json  STNG.json  TNK.json  TRMD.json  ZIM.json
src/config/: settings.py  universe.py
src/ingestion/: fleet.py  prices.py  rates.py
src/models/: fcf_engine.py  nav_engine.py  pipeline.py  rate_forecast.py  scorer.py
tests/: test_fcf_engine.py  test_nav_engine.py  test_scorer.py
