[project]
name = "shipping-stock-dashboard"
version = "0.1.0"
description = "Quantitative shipping stock analysis dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "statsmodels>=0.14.0",
    "plotly>=5.22.0",
    "pydantic-settings>=2.3.0",
    "pyarrow>=16.0.0",
    "requests>=2.32.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
